derive/ui_test/fail/get.stderr
error: The trait getter cannot be derive on fieldless struct.
 --> ui_test/fail/get.rs:3:10
  |
3 | #[derive(Getter)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Getter` (in Nightly builds, run with -Z macro-backtrace for more info)

error: error parsing option: name = "#" is missing and there is no default name for tuple struct
 --> ui_test/fail/get.rs:6:10
  |
6 | #[derive(Getter)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Getter` (in Nightly builds, run with -Z macro-backtrace for more info)

error: error parsing option: field attribute is not supported in name value mode, please refer to the documentation
  --> ui_test/fail/get.rs:13:10
   |
13 | #[derive(Getter)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Getter` (in Nightly builds, run with -Z macro-backtrace for more info)

error: No field has attribute #[get] or #[get_mut] has been found.
  --> ui_test/fail/get.rs:20:10
   |
20 | #[derive(Getter)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Getter` (in Nightly builds, run with -Z macro-backtrace for more info)
